--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game Project Title Goes Here</title>
-  
+    <title>My Legend of Zelda</title>
+
+    <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./sceneManager.js"></script>
+    <script type="text/javascript" src="./link.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
-    <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./animator.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
+    <canvas id="gameWorld" width="1024" height="768" style="background: black; border: 1px solid black" tabindex ="0" autofocus></canvas>
 </body>
 </html>
