--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./sceneManager.js"></script>
     <script type="text/javascript" src="./link.js"></script>
+    <script type="text/javascript" src="./overworld.js"></script>
     <script type="text/javascript" src="./timer.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" style="background: black; border: 1px solid black" tabindex ="0" autofocus></canvas>
+    <canvas id="gameWorld" width="768" height="648" style="background: black; border: 1px solid black" tabindex ="0" autofocus></canvas>
 </body>
 </html>
