--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./items.js"></script>
+    <script type="text/javascript" src="./enemies.js"></script>
+    <script type="text/javascript" src="./boundingbox.js"></script>
+    <script type="text/javascript" src="./environment.js"></script>
 </head>
 <body>
     <canvas id="gameWorld" width="768" height="648" style="background: black; border: 1px solid black" tabindex ="0" autofocus></canvas>
+    <div>
+        <br />
+        <input type="checkbox" id="debug" checked> Debug
+    </div>
 </body>
 </html>
